cmake_minimum_required(VERSION 3.24.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED on)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_BUILD_TYPE DEBUG)

project(ATMStateMachine VERSION 0.0.1 LANGUAGES C CXX)

set(ATM_STATE_MACHINE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
set(ATM_STATE_MACHINE_INCLUDE_DIR ${ATM_STATE_MACHINE_SOURCE_DIR}/include)

include_directories(${ATM_STATE_MACHINE_INCLUDE_DIR})

add_subdirectory(${ATM_STATE_MACHINE_SOURCE_DIR})